force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__CargoTypeUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoTypeUnit__c</fullName>
    <label>CARGO TYPE(UNIT)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__UnitType</valueSetName>
    </valueSet>
</CustomField>