force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Container_NO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Container_NO__c</fullName>
    <inlineHelpText>Please enter 11digits(4digit container ownership code+7digit container code)</inlineHelpText>
    <label>CONTAINER NUMBER</label>
    <length>20</length>
    <type>Text</type>
</CustomField>