force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Container_Ownership_Code__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Container_Ownership_Code__c</fullName>
    <description>UN/EDIFACT8078</description>
    <label>Container Ownership Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier supplied</fullName>
                <default>true</default>
                <label>Carrier supplied</label>
            </value>
            <value>
                <fullName>Shipper supplied</fullName>
            </value>
            <value>
                <fullName>Consolidator supplied</fullName>
            </value>
            <value>
                <fullName>Deconsolidator supplied</fullName>
            </value>
            <value>
                <fullName>Third party supplied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>