force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Container_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Container_Type_Code__c</fullName>
    <description>code	Container__c container__c 
GP : Dry Container	20`DC, 40`DC, 40`HC 
RT : Reefer container	20`REF, 40`REF 
UT : Open top container	20`OT, 40`OT 
PF : Flat rack container	20`FT, 40`FT 
PL : Platform container	20`PF, 40`PF 
ＴＮ : Tank container	ISO 
SN : Others	20`DC-Flexitank</description>
    <inlineHelpText>GP : Dry Container 20`DC, 40`DC, 40`HC / RT : Reefer container 20`REF, 40`REF / UT : Open top container 20`OT, 40`OT/</inlineHelpText>
    <label>Container Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__Container__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>GP : Dry Container</fullName>
            </value>
            <value>
                <fullName>RT : Reefer container</fullName>
            </value>
            <value>
                <fullName>UT : Open top container</fullName>
            </value>
            <value>
                <fullName>PF : Flat rack container</fullName>
            </value>
            <value>
                <fullName>PL : Platform container</fullName>
            </value>
            <value>
                <fullName>TN : Tank container</fullName>
            </value>
            <value>
                <fullName>SN : Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>