force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__ContainerMode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerMode__c</fullName>
    <label>Container Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContainerMode</valueSetName>
    </valueSet>
</CustomField>