force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Empty_Full_Container_Identification__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Empty_Full_Container_Identification__c</fullName>
    <description>空/実入りコンテナ表示（UN/EDIFACT8169）	

「4」は入力不可	
5	Full 


Empty/Full Container Identification	

4 is not allowed.	
5	Full</description>
    <inlineHelpText>Empty/Full Container Identification. 4 is not allowed. 5 is Full container.</inlineHelpText>
    <label>Empty/Full Container Identification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>