force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__GOODS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GOODS__c</fullName>
    <label>DESCRIPTION OF GOODS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>