force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__GROSS_WEIGHT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GROSS_WEIGHT__c</fullName>
    <label>GROSS WEIGHT(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>