force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Max_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Max_Gross_Weight__c</fullName>
    <inlineHelpText>Use for Verified Gross Mass of container on international transport (VGM)</inlineHelpText>
    <label>Max Gross Weight (KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>