force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__PIC_OF_TALLY_SERVICE_PROVIDER__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PIC_OF_TALLY_SERVICE_PROVIDER__c</fullName>
    <label>PIC OF TALLY SERVICE PROVIDER</label>
    <type>TextArea</type>
</CustomField>