force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__POD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__POD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>F/TMS CNTR (P.O.D)</relationshipLabel>
    <relationshipName>FTMSCNTRPOD</relationshipName>
    <type>Lookup</type>
</CustomField>