force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__PODCountry__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PODCountry__c</fullName>
    <formula>IF( clofor_com_cfs__POD__c =&quot;&quot;,   text(clofor_com_cfs__HBL_SHIPMENT__r.clofor_com_cfs__POD__r.clofor_com_cfs__Country_Name__c)  ,  text(clofor_com_cfs__POD__r.clofor_com_cfs__Country_Name__c) )</formula>
    <label>P.O.D Country</label>
    <type>Text</type>
</CustomField>