force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__PODPrint__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PODPrint__c</fullName>
    <formula>IF( clofor_com_cfs__POD__c =&quot;&quot;,   clofor_com_cfs__PODFormula__c  , clofor_com_cfs__POD__r.Name)</formula>
    <label>P.O.D-Print</label>
    <type>Text</type>
</CustomField>