force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__POLFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__POLFormula__c</fullName>
    <formula>clofor_com_cfs__HBL_SHIPMENT__r.clofor_com_cfs__POL__r.Name</formula>
    <label>P.O.L Formula</label>
    <type>Text</type>
</CustomField>