force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__POLPrint__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__POLPrint__c</fullName>
    <formula>IF( clofor_com_cfs__POL__c =&quot;&quot;,  clofor_com_cfs__POLFormula__c  , clofor_com_cfs__POL__r.Name)</formula>
    <label>P.O.L-Print</label>
    <type>Text</type>
</CustomField>