force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__QUANTITY_PACKAGES__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QUANTITY_PACKAGES__c</fullName>
    <label>QUANTITY(PACKAGES)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>