force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Remarks__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Remarks__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>