force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Route__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>clofor_com_cfs__Route__c</referenceTo>
    <relationshipLabel>F/TMS CNTR</relationshipLabel>
    <relationshipName>FTMSCNTR</relationshipName>
    <type>Lookup</type>
</CustomField>