force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Seal_No__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Seal_No__c</fullName>
    <label>SEAL NUMBER</label>
    <length>20</length>
    <type>Text</type>
</CustomField>