force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__SetDataInAFRInformation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SetDataInAFRInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Data in JP24 AFR Filing Information</label>
    <type>Checkbox</type>
</CustomField>