force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Shipper__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Shipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SHIPPER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FMS CNTR (SHIPPER)</relationshipLabel>
    <relationshipName>FMSCNTRShipper</relationshipName>
    <type>Lookup</type>
</CustomField>