force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__TALLY_REPORT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TALLY_REPORT__c</fullName>
    <label>TALLY REPORT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>