force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__TALLY_SERVICE_PROVIDER__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TALLY_SERVICE_PROVIDER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TALLY SERVICE PROVIDER</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TALLY_SERVICE_PROVIDER</relationshipName>
    <type>Lookup</type>
</CustomField>