force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__TALLY_SERVICE_REQUIRED__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TALLY_SERVICE_REQUIRED__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when Tally Service required</inlineHelpText>
    <label>TALLY SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>