force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__Unload__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Unload__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unload</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__LoadingLocation__c.clofor_com_cfs__HandlingType__c</field>
            <operation>equals</operation>
            <value>Unload</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__LoadingLocation__c</referenceTo>
    <relationshipLabel>CONTAINER (UNLOAD)</relationshipLabel>
    <relationshipName>FTSMCNTRUnload</relationshipName>
    <type>Lookup</type>
</CustomField>