force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/clofor_com_cfs__VesselVoyageNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VesselVoyageNo__c</fullName>
    <label>VESSEL VOYAGE NO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>