force-app/main/default/objects/clofor_com_cfs__Container_Info__c/fields/Container_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Container_Quantity__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>