force-app/main/default/objects/clofor_com_cfs__Container_Info__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__HBL_SHIPMENT__c</columns>
    <columns>clofor_com_cfs__Container_NO__c</columns>
    <columns>clofor_com_cfs__Seal_No__c</columns>
    <columns>clofor_com_cfs__QUANTITY_PACKAGES__c</columns>
    <columns>clofor_com_cfs__MEASUREMENT_CBM__c</columns>
    <columns>clofor_com_cfs__NET_WEIGHT__c</columns>
    <columns>clofor_com_cfs__GROSS_WEIGHT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>