force-app/main/default/objects/clofor_com_cfs__Container_Info__c/listViews/clofor_com_cfs__CNTR_Search_per_SO.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__CNTR_Search_per_SO</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__HBL_SHIPMENT__c</columns>
    <columns>clofor_com_cfs__Container_NO__c</columns>
    <columns>clofor_com_cfs__Seal_No__c</columns>
    <columns>clofor_com_cfs__QUANTITY_PACKAGES__c</columns>
    <columns>clofor_com_cfs__MEASUREMENT_CBM__c</columns>
    <columns>clofor_com_cfs__NET_WEIGHT__c</columns>
    <columns>clofor_com_cfs__GROSS_WEIGHT__c</columns>
    <columns>clofor_com_cfs__CustomerRequest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__HBL_SHIPMENT__c</field>
        <operation>contains</operation>
        <value>065280</value>
    </filters>
    <label>1.CNTR Search per SO</label>
    <language>en_US</language>
</ListView>