force-app/main/default/objects/clofor_com_cfs__Container_Info__c/listViews/clofor_com_cfs__CNTRRoute.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__CNTRRoute</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__HBL_SHIPMENT__c</columns>
    <columns>clofor_com_cfs__POL__c</columns>
    <columns>clofor_com_cfs__POD__c</columns>
    <columns>clofor_com_cfs__Container_NO__c</columns>
    <columns>clofor_com_cfs__TEU__c</columns>
    <columns>clofor_com_cfs__Container__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__Route__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__POL__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>CNTR Route Plan</label>
</ListView>