force-app/main/default/objects/clofor_com_cfs__Container_Info__c/listViews/clofor_com_cfs__Container_Search_Ref.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Container_Search_Ref</fullName>
    <columns>clofor_com_cfs__HBL_SHIPMENT__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Container__c</columns>
    <columns>clofor_com_cfs__Container_NO__c</columns>
    <columns>clofor_com_cfs__Seal_No__c</columns>
    <columns>clofor_com_cfs__QUANTITY_PACKAGES__c</columns>
    <columns>clofor_com_cfs__MEASUREMENT_CBM__c</columns>
    <columns>clofor_com_cfs__Empty_Full_Container_Identification__c</columns>
    <columns>clofor_com_cfs__NET_WEIGHT__c</columns>
    <columns>clofor_com_cfs__GOODS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__Container__c</field>
        <operation>equals</operation>
        <value>20&apos;REF,40&apos;REF</value>
    </filters>
    <label>Container Search-Ref</label>
    <language>en_US</language>
</ListView>