force-app/main/default/objects/clofor_com_cfs__Container_Info__c/listViews/clofor_com_cfs__Massive_Update_FORWARDING_ID.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Massive_Update_FORWARDING_ID</fullName>
    <columns>clofor_com_cfs__HBL_SHIPMENT__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Container_NO__c</columns>
    <columns>clofor_com_cfs__Seal_No__c</columns>
    <columns>clofor_com_cfs__QUANTITY_PACKAGES__c</columns>
    <columns>clofor_com_cfs__MEASUREMENT_CBM__c</columns>
    <columns>clofor_com_cfs__GROSS_WEIGHT__c</columns>
    <columns>clofor_com_cfs__NET_WEIGHT__c</columns>
    <columns>clofor_com_cfs__GOODS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__HBL_SHIPMENT__c</field>
        <operation>equals</operation>
        <value>010742</value>
    </filters>
    <label>Massive Update-FORWARDING ID</label>
    <language>en_US</language>
</ListView>